# soji-ai-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cpu  README.md  methods_comparison.md  pyproject.toml  report.md
notebooks/: notebook-1.ipynb  workbench-1.ipynb
results/164f4603_260220/: ad_extractions.json
results/8083c444_260220/: ad_classification_results.csv  ad_extractions.json
src/: config.py  run.py
src/core/: prompt.py  schemas.py  utils.py
src/pipeline/: llm_pipeline.py  ocr_llm_pipeline.py
test/: ad_test_data.csv  ad_test_data_2.csv
